mobile UI fix
- fixed issue where background image zooms in too much on mobile

--- a/style/content.css
+++ b/style/content.css
@@ -494,7 +494,7 @@ p{
         grid-template-columns: 1fr;
         justify-items: center;
         align-items: start;
-        background-position: 57% -70px;
+        background-attachment: scroll;
         max-width: 100vw;
     }
     .greeting {
@@ -558,12 +558,8 @@ p{
     .transition__background {
         height: 35vh;
         background-position: center;
+        background-attachment: scroll;
     }
-
-    #transition3 {
-        background-position: 40% 200px;
-    }
-
     .project__section__title {
         margin-bottom: 30px;
     }
